--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -17,6 +17,9 @@
       <li>
         <a routerLink="aboutus">About Us</a>
       </li>
+      <li>
+        <a routerlink="contactus">Contact Us</a>
+      </li>
     </ul>
   </div>
 </nav>
