Fixed code structure, fixed navigation error, removed fixed footer

--- a/src/app/about-us/about-us.component.html
+++ b/src/app/about-us/about-us.component.html
@@ -2,24 +2,24 @@
   <div class="row container">
     <h2 class="header center">About Scholarly</h2>
   </div>
+</div>
 
-  <div class="section grey lighten-4">
-    <div class="row container">
-      <div class="achivement-sec col s4 center">
-        <i class="material-icons">fast_forward</i>
-        <h5>Speed up your development</h5>
-        <p class="grey-text">The amount of time required to wait for a mentor is reduced via our platform!</p>
-      </div>
-      <div class="achivement-sec col s4 center">
-        <i class="material-icons">group</i>
-        <h5>User-Friendly experience</h5>
-        <p class="grey-text">Have a User-Friendly experience with our platform!</p>
-      </div>
-      <div class="achivement-sec col s4 center">
-        <i class="material-icons">group</i>
-        <h5>User-Friendly experience</h5>
-        <p class="grey-text">Have a User-Friendly experience with our platform!</p>
-      </div>
+<div class="section grey lighten-4">
+  <div class="row container center">
+    <div class="col s4">
+      <i class="material-icons">fast_forward</i>
+      <h5>Speed up your development</h5>
+      <p class="grey-text">The amount of time required to wait for a mentor is reduced via our platform!</p>
+    </div>
+    <div class="col s4">
+      <i class="material-icons">group</i>
+      <h5>User-Friendly experience</h5>
+      <p class="grey-text">Have a User-Friendly experience with our platform!</p>
+    </div>
+    <div class="col s4">
+      <i class="material-icons">group</i>
+      <h5>User-Friendly experience</h5>
+      <p class="grey-text">Have a User-Friendly experience with our platform!</p>
     </div>
   </div>
 </div>
