--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -15,9 +15,10 @@
       </div>
     </div>
   </div>
+
   <div class="footer-copyright">
     <div class="container">
-      &copy; 2017, Scholarly.
+      &copy; 2017, Scholarly; Developed by Scholarly Team
     </div>
   </div>
 </footer>
