--- a/src/app/members/members.component.html
+++ b/src/app/members/members.component.html
@@ -6,6 +6,6 @@
 
 <div class="section grey lighten-4">
   <div class="row container">
-    Service isnt online yet
+    <h4 class="center">Service isn't online yet</h4>
   </div>
 </div>
