--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -18,7 +18,7 @@
         <a routerLink="aboutus">About Us</a>
       </li>
       <li>
-        <a routerlink="contactus">Contact Us</a>
+        <a routerLink="contactus">Contact Us</a>
       </li>
     </ul>
   </div>
