--- a/src/app/contact-us/contact-us.component.html
+++ b/src/app/contact-us/contact-us.component.html
@@ -1,6 +1,11 @@
-<div>
+<div class="section">
+  <div class="row container">
+    <h2 class="header center">Contact Us</h2>
+  </div>
+</div>
 
-
-
-
+<div class="section grey lighten-4">
+  <div class="row container">
+    <h2 class="center">Add anything here?</h2>
+  </div>
 </div>
