--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -1,19 +1,17 @@
 <div class="section">
   <div class="row container">
-    <h2 class="header center">Scholarly's Team</h2>
+    <h2 class="header center">Founders</h2>
   </div>
-</div>
-<div class="section">
-    <div>
-      <h5 class="header center">Founders</h5>
-    </div>
-    <div class="center">
-      <h6 class="col s12">Sung Jae Bae</h6>
-    </div>
-    <div class="section">
-      <h5 class="header center">Startup Team Members</h5>
-    </div>
 </div>
 
 <div class="section grey lighten-4">
+  <div class="row container">
+    <h6 class="center">Sung Jae Bae</h6>
+  </div>
+</div>
+
+<div class="section">
+  <div class="row container">
+    <h2 class="header center">Startup Team Members</h2>
+  </div>
 </div>
