Major update: File structure changed, new modules added, new authentication service added, new authentication guard added.

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="black">
   <div class="nav-wrapper container">
-    <a href="/" class="brand-logo">
+    <a routerLink="/" class="brand-logo">
       <i class="material-icons left">school</i>
       Scholarly
     </a>
@@ -19,6 +19,9 @@
       </li>
       <li>
         <a routerLink="contactus">Contact Us</a>
+      </li>
+      <li>
+        <a routerLink="dashboard">Dashboard</a>
       </li>
     </ul>
   </div>
