Changed Cursor on Logout

--- a/src/app/users/dashboard/dashboard.component.html
+++ b/src/app/users/dashboard/dashboard.component.html
@@ -35,7 +35,7 @@
               <p>Display Name: {{ user.displayName }}</p>
             </div>
             <div class="card-action">
-              <a (click)="auth.signOut()">Logout</a>
+              <a style="cursor: pointer;"(click)="auth.signOut()">Logout</a>
             </div>
           </div>
 
