Redone navbar to proposed design, rebuilt live beta website

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -6,19 +6,13 @@
     </a>
     <ul id="nav-mobile" class="right hide-on-med-and-down">
       <li>
-        <a routerLink="/">Home</a>
-      </li>
-      <li>
-        <a routerLink="team">Team</a>
-      </li>
-      <li>
-        <a routerLink="members">Members</a>
+        <a>Services</a>
       </li>
       <li>
         <a routerLink="aboutus">About Us</a>
       </li>
       <li>
-        <a routerLink="contactus">Contact Us</a>
+        <a>Donate</a>
       </li>
       <li>
         <a routerLink="dashboard">Dashboard</a>
